docs/css/styles.css
/* ... */
header #introduction .container {
  position: absolute;
  top: 50%;
  left: 45%;
  transform: translate(-50%, -50%);
  height: fit-content;
  z-index: 1;
}
header #introduction .container h1 {
  line-height: 3.5rem;
}
header #introduction .container h1 .tertiary {
  color: #9B1D20;
}
header #introduction .container p {
  font-size: 1.25rem;
  font-weight: bold;
  color: #205a58;
  width: 30ch;
}
header #introduction #contacts {
  align-self: flex-end;
  justify-self: flex-end;
  bottom: 0px;
  left: 0px;
  background-color: #3AAFA9;
  display: flex;
  flex: 0 1 33%;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  min-width: fit-content;
}
header #introduction #contacts a {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  margin-block: 0.75rem;
  margin-inline: 1rem;
  font-family: "IBM Plex Sans", sans-serif;
  font-size: clamp(1.1rem, 2rem, 1.4vw);
  font-weight: 600;
  color: #FEFFFF;
}
header #introduction #contacts a img {
  display: flex;
  flex-grow: 1;
  width: 2.25rem;
}
header .btn-cv {
  font-family: "IBM Plex Sans", sans-serif;
  font-size: clamp(1.1rem, 2rem, 1.4vw);
  font-weight: 600;
  color: #FEFFFF;
  font-size: 1rem;
  border-radius: 50em;
  height: fit-content;
  width: max-content;
  letter-spacing: 0.2rem;
  margin-block: 2rem;
  padding-block: 1rem;
  padding-inline: 1.5rem;
  background-color: #9B1D20;
}
header .btn-cv:hover {
  cursor: pointer;
}
header #profile-picture {
  display: flex;
  flex: 1 0 50%;
  background-color: #3AAFA9;
  justify-content: center;
  overflow: hidden;
}
header #profile-picture img {
  height: 90%;
  align-self: flex-end;
  transform: scaleX(-1);
  filter: drop-shadow(7px 7px 7px #2B7A78);
  margin-inline-start: 12rem;
  margin-inline-end: auto;
  z-index: 0;
}
header #profile-picture #mobile-cv {
  visibility: hidden;
  position: absolute;
}

/***************
  MAIN CONTENT
****************/
section {
  padding: 0rem 4.5rem 3.5rem 4.5rem;
}

#main-content-block {
  width: 100%;
}

/***************
    ABOUT ME 
****************/
#about-me .grid-container {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}
#about-me article {
  grid-column: 2/6;
  grid-row: span 1;
}
#about-me #skills {
  grid-column: 7/12;
  grid-row: span 3;
}
#about-me #skills #skills-icons {
  display: flex;
  flex-wrap: wrap;
  padding-block-start: 1rem;
}
#about-me #skills #skills-icons .icon-container {
  display: flex;
  flex: 1 0 25%;
  flex-direction: column;
  min-width: 6rem;
  margin-block-end: 2rem;
}
#about-me #skills #skills-icons .icon-container img {
  align-self: center;
  min-width: 4.5rem;
}
#about-me #skills #skills-icons .icon-container p {
  flex-basis: 100%;
  text-align: center;
  margin-block-start: 0.125rem;
  font-size: 0.938rem;
}
#about-me #education {
  grid-column: 2/6;
  grid-row: span 1;
  margin-block-start: 2rem;
}
#about-me #education #degree {
  display: flex;
  flex-wrap: wrap;
}
#about-me #education #degree #degree-type,
#about-me #education #degree #college-name {
  flex: 1 0 100%;
}
#about-me #education #degree #degree-type,
#about-me #education #degree #degree-year {
  font-family: "IBM Plex Mono", monospace;
  font-size: 1.125rem;
  line-height: 1.7rem;
  letter-spacing: 0.03rem;
  font-weight: 500;
  color: #2B7A78;
  color: #3AAFA9;
  justify-content: end;
  transform: translate(0%, 15%);
  font-size: 0.875rem;
}
#about-me #education #degree #degree-field {
  font-family: "Montserrat", sans-serif;
  font-size: 1.375rem;
  letter-spacing: 0.1rem;
  font-weight: 900;
  color: #17252A;
  font-family: "IBM Plex Mono", monospace;
  font-size: 1.5rem;
  margin-inline-end: 0.25rem;
}

/**************
    PROJECTS
 **************/
#projects {
  display: flex;
  background-color: #DEF2F1;
  justify-content: center;
  padding: 0;
}
#projects .grid-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
#projects .grid-container .flex-container {
  display: flex;
  flex: 1 1 40%;
  justify-content: center;
  margin-inline: 2rem;
  margin-block-end: 4rem;
}
#projects .grid-container .project {
  min-width: 32.75rem;
  max-width: 35rem;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: min-content 1fr;
  border-radius: 10px;
  overflow: hidden;
  background-color: #FEFFFF;
  filter: drop-shadow(7px 7px 7px #2B7A78);
}
#projects .grid-container .project a {
  grid-column: 1/-1;
  height: fit-content;
}
#projects .grid-container .project a img {
  display: flex;
  max-width: 100%;
  flex-basis: 100%;
  flex-wrap: wrap;
  align-self: center;
  /* outline: white 3px solid; */
}
#projects .grid-container .project .description {
  grid-column: 1/5;
  grid-row: span 1;
  margin-block: 2rem;
  align-self: start;
  display: flex;
  flex-direction: column;
  margin-inline-start: 2rem;
}
#projects .grid-container .project .description p {
  padding-inline: 1rem;
  margin-block-end: 1.5rem;
}
#projects .grid-container .project .description ul {
  display: flex;
  flex-wrap: wrap;
  flex-basis: 100%;
  padding-inline: 1rem;
}
#projects .grid-container .project .description ul li {
  font-family: "IBM Plex Mono", monospace;
  font-size: 1.125rem;
  line-height: 1.7rem;
  letter-spacing: 0.03rem;
  font-weight: 500;
  color: #2B7A78;
  font-size: 1.063rem;
  margin-block: 0.375rem;
}
#projects .grid-container .project .description ul li span {
  font-size: 1.125em;
  font-weight: 900;
  color: #17252A;
}
#projects .grid-container .project .stack {
  grid-column: 5/6;
  grid-row: span 1;
  display: flex;
  height: 100%;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-inline: 2%;
  align-self: center;
}
#projects .grid-container .project .stack .icon {
  display: flex;
  flex-basis: 100%;
  justify-content: center;
  width: 100%;
}
/* ... */

